Add Google Colab training support - Complete notebook and documentation for BERT training with GPU T4

--- a/training/bert_train.ipynb
+++ b/training/bert_train.ipynb
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -745,7 +745,7 @@
         "import re\n",
         "\n",
         "# ==================== TEXT NORMALIZER ====================\n",
-        "class SPBETextNormalizer:\n",
+        "class TextNormalizer:\n",
         "    \"\"\"Text normalizer khusus untuk istilah SPBE\"\"\"\n",
         "\n",
         "    def __init__(self):\n",
@@ -803,7 +803,7 @@
         "        return text\n",
         "\n",
         "# Global normalizer instance\n",
-        "text_normalizer = SPBETextNormalizer()\n",
+        "text_normalizer = TextNormalizer()\n",
         "\n",
         "# ==================== MAIN TRAINING CODE ====================\n",
         "# Set device\n",
@@ -949,17 +949,16 @@
         "    # UNCOMMENT SALAH SATU MODEL BERDASARKAN KEBUTUHAN:\n",
         "\n",
         "    # OPTION 1: Fast Training (Recommended for Laptop)\n",
-        "    #model_name = \"indobenchmark/indobert-lite-base-p1\"  # ~200MB, Training: 1-2 jam\n",
-        "    model_name = \"cahya/bert-base-indonesian-522M\"\n",
-        "    print(\"⚡ Using FAST model: indobert-lite-base-p1\")\n",
+        "    #model_name = \"indobenchmark/indobert-lite-base-p1\"  # ~200MB\n",
+        "    # print(\"⚡ Using FAST model: indobert-lite-base-p1\")\n",
         "\n",
         "    # OPTION 2: Balanced (Good accuracy + reasonable time)\n",
-        "    # model_name = \"indobenchmark/indobert-base-p1\"  # ~400MB, Training: 2-3 jam\n",
+        "    # model_name = \"indobenchmark/indobert-base-p1\"  # ~400M\n",
         "    # print(\"⚖️ Using BALANCED model: indobert-base-p1\")\n",
         "\n",
         "    # OPTION 3: Best Accuracy (Heavy - use in Colab)\n",
-        "    # model_name = \"cahya/bert-base-indonesian-522M\"  # ~500MB, Training: 4-5 jam\n",
-        "    # print(\"🎯 Using BEST model: bert-base-indonesian-522M\")\n",
+        "    model_name = \"cahya/bert-base-indonesian-522M\"  # ~500M\n",
+        "    print(\"🎯 Using BEST model: bert-base-indonesian-522M\")\n",
         "\n",
         "    print(f\"📦 Loading {model_name}...\")\n",
         "\n",
@@ -1076,15 +1075,6 @@
         "if __name__ == \"__main__\":\n",
         "    main()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "pTyS7X3WGgF0"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
